vbnc/vbnc/vbnc/tests/Errors/32007-1.vb
Class T
    Const M_Char_Char As Char = 12I
End Class